1. 深入理解Java虚拟机，第七章，虚拟机类加载机制